# nicegui-spa

./: .gitignore  __init__.py  header.py  left_drawer.py  main.py  pyproject.toml  right_drawer.py  state.py  symbols.csv  test.db  test.json
alembic/versions/: 428a0aaf140b_add_tables.py  4670717b973b_add_tables.py  53a2431561ab_add_tables.py  6c260cb3414d_add_tables.py  84bb1737a01b_add_tables.py  988810850a5b_add_tables.py  9e886c2a431d_add_tables.py  a54e8b183bd9_add_tables.py  c2f3385831e7_add_tables.py  c96013bf228b_add_tables.py  cd067fcf693b_add_tables.py
component/: __init__.py  local_file_picker.py
data/: commands.py  queries.py  querries.py  services.py
db/: seed.py  seed_fake.py
dto/: __init__.py  new_account_data.py  new_symbol_data.py
models/: Account.py  Instrument.py  Symbol.py  Trade.py  TradeNote.py  __init__.py
models/enums/: __init__.py  currencies.py  exit_reason.py  symbol_type.py
mt5/: client.py
pages/: __init__.py  accounts.py  analytics.py  dashboard.py  general.py  journal.py  trading.py
routers/: router.py
utils/: mock_event.py  ticker.py  tree.py  validation.py
