[project]
name = "nicegui-spa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "alembic>=1.16.2",
    "asyncio>=3.4.3",
    "cryptography>=45.0.5",
    "dotenv>=0.9.9",
    "metatrader5>=5.0.5120",
    "nicegui[highcharts]>=2.20.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "sqlalchemy>=2.0.41",
]

[tool.black]
line-length = 200
target-version = ['py313']
